force-app/main/default/objects/Subsidy_Allocation__c/Subsidy_Allocation__c.object-meta.xml
<CustomObject>
    <label>Subsidy Allocation</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subsidy Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>