force-app/main/default/objects/Subsidy_Allocation__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <label>BAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>