force-app/main/default/objects/Subsidy_Allocation__c/fields/BAN_Text__c.field-meta.xml
<CustomField>
    <fullName>BAN_Text__c</fullName>
    <description>Used on Layout to now should thousand-separator</description>
    <formula>TEXT(BAN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAN</label>
    <type>Text</type>
</CustomField>