force-app/main/default/objects/Subsidy_Allocation__c/fields/Comment_From_Robot__c.field-meta.xml
<CustomField>
    <fullName>Comment_From_Robot__c</fullName>
    <description>Value from RPA on handling of the Subsidy Allocation.</description>
    <label>Comment From Robot</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>