force-app/main/default/objects/Subsidy_Allocation__c/fields/CVR_No__c.field-meta.xml
<CustomField>
    <fullName>CVR_No__c</fullName>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>