force-app/main/default/objects/Subsidy_Allocation__c/fields/End_Date_Quote__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Quote__c</fullName>
    <label>Quote End Date</label>
    <type>Date</type>
</CustomField>