force-app/main/default/objects/Subsidy_Allocation__c/fields/Number_of_Product_Occurence_in_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Product_Occurence_in_Quotes__c</fullName>
    <label>Number of Product Occurence in Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>