force-app/main/default/objects/Subsidy_Allocation__c/fields/Product_SoC__c.field-meta.xml
<CustomField>
    <fullName>Product_SoC__c</fullName>
    <label>Product SoC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>