force-app/main/default/objects/Subsidy_Allocation__c/fields/Product_Subsidy_Value_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_Subsidy_Value_Total__c</fullName>
    <label>Product Subsidy Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>