force-app/main/default/objects/Subsidy_Allocation__c/fields/SoC_Seq_No__c.field-meta.xml
<CustomField>
    <fullName>SoC_Seq_No__c</fullName>
    <label>SoC Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>