force-app/main/default/objects/Subsidy_Allocation__c/fields/Start_Date_Quote__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Quote__c</fullName>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>