force-app/main/default/objects/Subsidy_Allocation__c/fields/Subscriber_No__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_No__c</fullName>
    <label>Subscriber Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>