force-app/main/default/objects/Subsidy_Allocation__c/fields/Subscriber_No_Without_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_No_Without_Prefix__c</fullName>
    <description>Used on Layouts to not shoe the &quot;GSM045&quot; prefix from Subscriber Number</description>
    <formula>SUBSTITUTE(Subscriber_No__c, &quot;GSM045&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber Number</label>
    <type>Text</type>
</CustomField>