force-app/main/default/objects/Subsidy_Allocation__c/fields/Unique_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Row_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>