force-app/main/default/objects/Subsidy_Allocation__c/fields/Web_Module_Fokus_Root_BAN__c.field-meta.xml
<CustomField>
    <fullName>Web_Module_Fokus_Root_BAN__c</fullName>
    <label>Web Module Fokus Root BAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>