force-app/main/default/objects/Subsidy_Allocation__c/fields/Web_Module_Fokus_Root_BAN_Text__c.field-meta.xml
<CustomField>
    <fullName>Web_Module_Fokus_Root_BAN_Text__c</fullName>
    <description>Used on Layout to not show thousand-separator.</description>
    <formula>TEXT(Web_Module_Fokus_Root_BAN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Root BAN</label>
    <type>Text</type>
</CustomField>