force-app/main/default/objects/Subsidy_Allocation__c/fields/Web_Module_Fokus_Root_BAN_Tree_Level__c.field-meta.xml
<CustomField>
    <fullName>Web_Module_Fokus_Root_BAN_Tree_Level__c</fullName>
    <label>Root BAN Tree Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>