force-app/main/default/objects/Subsidy_Allocation__c/fields/Web_Module_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Module_Unique_Id__c</fullName>
    <label>Web Module Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>