force-app/main/default/objects/Subsidy_Allocation__c/fields/Web_Module_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Module_User_Name__c</fullName>
    <label>Web Module User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>